--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -382,20 +382,34 @@ header.jumbotron {
 }
 
 /*-----------------------------Skills Styles------------------------------*/
+.details {
+    text-align: center;
+}
+
 .devicon {
-    position: relative;
-    height: 10%;
-    width: 10%;
+    /* display: none; */
+}
+
+.details:nth-child(4) {
+    border-right: 2px solid black;
+}
+
+.details:nth-child(6) {
+    border-left: 2px solid black;
 }
 
 .devicon ul {
     padding: 0;
     margin: 0;
+    height: 100%;
+    width: 100%;
 }
 
 .devicon li {
+    color: lightgray;
     list-style-type: none;
-    display: inline;
+    display: inline-block;
+    margin: auto;
 }
 
 #skills {
@@ -413,7 +427,7 @@ header.jumbotron {
 #skills .line .spot {
     margin:-7px auto;
     display:block;
-    width:20px;
+    width:200px;
     height:20px;
     background:#74C7D5;
     border:5px solid #fff;
@@ -539,18 +553,18 @@ header.jumbotron {
                 -12px 0px 0px 12px rgba(255,255,255,0.2);
 }
 
-/*-----------------------------Skills Styles-------------------------------*/
-#skills {
+/*-----------------------------other Styles-------------------------------*/
+#other {
     padding-top:80px;
 	background:#fff;
     color:#228Ca8;
 }
 
-.skills .col-sm-3 {
+.other .col-sm-3 {
     margin-bottom:80px;
 }
 
-#skills.cuda-section {
+#other.cuda-section {
     padding-bottom:40px;
 }
 
@@ -580,7 +594,7 @@ header.jumbotron {
   font-size: 40px;
 }
 
-#skills .skills h2 {
+#other .other h2 {
     margin:0 0 80px;
     color:#228Ca8;
     font-size:24px;
