--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -456,17 +456,26 @@ header.jumbotron {
     margin: auto;
 }
 
-.devicon div p {
-    width: 100%;
-}
-
 #skills {
     background:#fff;
     color:#999;
     padding:80px 0;
 }
 
-#skills .row.line {
+.skills h2 {
+    margin:0;
+    margin-bottom:24px;
+    font-size:24px;
+    font-weight:400;
+    color: #545454
+}
+
+.skills p {
+    margin:0;
+    margin-bottom:24px;
+}
+
+/* #skills .row.line {
     height:6px;
     background:#74C7D5;
     margin-bottom:24px;
@@ -545,94 +554,16 @@ header.jumbotron {
 
 .skills .item {
     margin-bottom:80px;
-}
-
-.skills h2 {
-    margin:0;
-    margin-bottom:24px;
-    font-size:24px;
-    font-weight:400;
-    color: #545454
-}
-
-.skills p {
-    margin:0;
-    margin-bottom:24px;
-}
-
-
-.skills.bottom-row p {
-    margin-top:48px;
-}
-
-/*-----------------------------other Styles-------------------------------*/
-#other {
-    padding-top:80px;
-	background:#fff;
-    color:#228Ca8;
-}
-
-.other .col-sm-3 {
-    margin-bottom:80px;
-}
-
-#other.cuda-section {
-    padding-bottom:40px;
-}
-
-.chart {
-  position: relative;
-  display: inline-block;
-  width: 170px;
-  height: 170px;
-  margin-bottom: 50px;
-  text-align: center;
-}
-.chart canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.percent {
-  display: inline-block;
-  line-height: 170px;
-  font-size: 50px;
-  font-weight: 300;
-  z-index: 2;
-}
-.percent:after {
-  content: '%';
-  margin-left: 0.1em;
-  font-size: 40px;
-}
-
-#other .other h2 {
-    margin:0 0 80px;
-    color:#228Ca8;
-    font-size:24px;
-    font-weight:300;
-}
+} */
 
 /*---------------------------Portfolio Styles---------------------------*/
 #portfolio {
-    background:#fff;
-}
-
-#portfolio .section-title {
-    color:#228Ca8;
-    font-weight:300;
-    margin-bottom:60px;
-}
-
-#portfolio .section-title [class*=fa] {
-    color:#fff;
-}
-
-#portfolio-header {
-    padding:80px 0;
     background:#f5f5f5;
-    border-top:1px solid #ddd;
-    border-bottom:1px solid #ddd;
+    padding:80px 0;
+}
+
+#filter-works {
+    margin-bottom: 1%;
 }
 
 #filter-works ul {
@@ -664,7 +595,7 @@ header.jumbotron {
 
 #filter-works ul li a, #filter-works ul li a:active, #filter-works ul li a:hover {
     padding:0;
-    font-size:24px;
+    font-size:20px;
     line-height:24px;
     font-weight:300;
     background:transparent;
@@ -698,7 +629,6 @@ header.jumbotron {
 	-ms-transform: scale(1);
 	transform: scale(1);
 	opacity:1;
-	filter:alpha(opacity=100);
 	overflow:hidden;
 }
 
@@ -706,8 +636,7 @@ header.jumbotron {
 	-moz-transform: scale(0);
 	-ms-transform: scale(0);
     transform:scale(0);
-	opacity:0;
-	filter:alpha(opacity=0);
+	opacity:0;  
 }
 
 .project-item img {
@@ -733,22 +662,15 @@ header.jumbotron {
     height:100%;
     top:0;
     left:0;
-    background:#74C7D5;
     opacity:0;
-	filter:alpha(opacity=0);
     -webkit-transition:all 0.3s ease-out;
     transition:all 0.3s ease-out;
 }
 
-.project-item:hover .hover-mask {
-    opacity:1;
-	filter:alpha(opacity=100);
-    padding:20px;
-}
-
-.no-csstransitions .project-item:hover .hover-mask {
-    opacity:0;
-	filter:alpha(opacity=0);
+.project-item .hover-mask:hover {
+    background:rgba(60, 72, 72, 0.9);
+    opacity: 1;
+    padding:15px;
 }
 
 .project-item .hover-mask:after {
@@ -768,10 +690,8 @@ header.jumbotron {
     border-width:20px;
 }
 
-
 .project-item .hover-mask .project-title {
     color:#fff;
-    margin:0;
     padding:16px;
     font-size:21px;
     line-height:24px;
@@ -781,29 +701,26 @@ header.jumbotron {
 .project-item .hover-mask p {
     color:#fff;
     margin:0;
-    padding:16px;
-    font-size:16px;
+    font-size:20px;
     line-height:24px;
     font-weight:300;
-    position:absolute;
-    bottom:0;
-    right:0;
-    text-align:right;
+    text-align:center;
     -webkit-transition:all 0.3s ease-out;
     transition:all 0.3s ease-out;
 }
 
-.project-item .hover-mask:hover p {
-    bottom:20px;
-    right:20px;
+.project-item .hover-mask .live {
+    padding-right: 20%;
 }
 
-.no-opacity .project-item .hover-mask p {
-	visibility:hidden;
+.project-item .hover-mask .code {
+    padding-left: 20%;
 }
 
-.no-opacity .project-item .hover-mask:hover p {
-	visibility:visible;
+.live:hover, .code:hover {
+    cursor: pointer;
+    color: #74c7d5;
+    opacity: 1000;
 }
 
 .masonry, .masonry .masonry-brick {
@@ -844,17 +761,28 @@ header.jumbotron {
     margin-bottom:84px;
 }
 
-#contact .section-title [class*=fa] {
-    color:#74c7d5;
-	-webkit-transform: rotate(-15deg);
-	-moz-transform: rotate(-15deg);
-	-ms-transform: rotate(-15deg);
-    transform:rotate(-15deg);
-    opacity:0.6;
-	filter:alpha(opacity=60);
+#contact .contact-info h3 {
+    color: white;
 }
 
-#contact .contact-info p, #contact .contact-info address {
+#contact .contact-info li {
+    list-style-type: none;
+    padding-bottom: 1%; 
+}
+
+#contact .contact-info li:first-child > i {
+    font-size: 50px;
+}
+
+#contact .contact-info li:nth-child(2) > i {
+    font-size: 35px;
+}
+
+#contact .contact-info i {
+    font-size: 40px;
+}
+
+#contact .contact-info p {
     margin:0 0 30px;
     font-size:18px;
     line-height:30px;
@@ -1326,6 +1254,18 @@ header.jumbotron {
         width: 33%;
         height: 24%;
     }
+
+    #contact .contact-info ul {
+        padding: 0;
+    }
+
+    #contact .contact-info i {
+        width: 100%;
+    }
+
+    #contact .contact-info {
+        text-align: center;
+    }
 }
 
 @media (max-width: 479px) {
@@ -1361,7 +1301,7 @@ header.jumbotron {
         line-height:28px;
     }
 
-    #contact .contact-info p, #contact .contact-info address {
+    #contact .contact-info p {
         font-size:16px;
         line-height:26px;
     }
@@ -1382,5 +1322,9 @@ header.jumbotron {
         font-size:24px;
         line-height:32px;
         padding-top:14px;
+    }
+
+    #contact-form > p {
+        text-align: center;
     }
 }
