--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -1,6 +1,7 @@
 /*--COLORS
 #a3a3a3 - gray/dark white
-#74c7d5 - teal/blue
+#74c7d5 - original teal
+#228Ca8 - new teal/blue
 #545454 - lightgray/ light black
 --*/
 
@@ -346,6 +347,46 @@ header.jumbotron {
     opacity:1;
 }
 
+.scroll-down {
+    width: 40px;
+    height: 40px;
+    margin-left: -20px;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    text-align: center;
+    text-decoration: none;
+}
+
+.scroll-down-icon {
+    display: block;
+    width: 10px;
+    height: 10px;
+    margin-left: -5px;
+    position: absolute;
+    left: 50%;
+    bottom: 4px;
+    color: #fff;
+    font-size: 30px;
+    -webkit-animation: scroll-down-anim 1s infinite;
+    -moz-animation: scroll-down-anim 1s infinite;
+    -o-animation: scroll-down-anim 1s infinite;
+    animation: scroll-down-anim 1s infinite;
+    z-index: 2;
+}
+
+@keyframes scroll-down-anim {
+    0% {
+        bottom: 2px;
+    }
+    50% {
+        bottom: 7px;
+    }
+    100% {
+        bottom: 2px;
+    }
+}
+
 /*-----------------------------About Styles-------------------------------*/
 #about {
     background-color: white;
@@ -405,34 +446,6 @@ header.jumbotron {
 	opacity:1;
 }
 
-/*--General Button--*/
-.btn-theme {
-	color:#fff;
-	background-color:#74c7d5;
-	padding:15px 90px;
-	font-size:24px;
-	font-weight:300;
-	text-transform:uppercase;
-	border:none;
-	border-radius:0;
-	-webkit-transition:background-color 0.2s ease-out;
-	transition:background-color 0.2s ease-out;
-}
-
-.btn-theme:hover {
-	cursor:pointer;
-	color:#fff;
-	background-color:#90D2DD;
-}
-
-.btn-theme:active, .btn-theme:focus {
-	color:#fff;
-}
-
-.btn-theme [class*=fa] {
-    margin-right:10px;
-}
-
 /*-----------------------------Skills Styles------------------------------*/
 .devicon {
     text-align: center;
@@ -475,87 +488,6 @@ header.jumbotron {
     margin-bottom:24px;
 }
 
-/* #skills .row.line {
-    height:6px;
-    background:#74C7D5;
-    margin-bottom:24px;
-}
-
-#skills .line .spot {
-    margin:-7px auto;
-    display:block;
-    width:250px;
-    height:20px;
-    background:#74C7D5;
-    border:5px solid #fff;
-    border-radius:50%;
-}
-
-.skills .icon {
-    position:relative;
-    display:inline-block;
-    padding:0;
-    margin-bottom:24px;
-    width:160px;
-    height:160px;
-    text-align:center;
-    font-size:72px;
-    line-height:130px;
-    color:#ccc;
-    background:none;
-    border:10px solid #74C7D5;
-    border-radius: 50%;
-    z-index:1;
-    -webkit-transition:color 0.2s ease-in;
-    transition:color 0.2s ease-in;
-}
-
-.no-opacity .skills .icon {
-	color:#fff;
-}
-
-.skills .icon:after {
-	pointer-events: none;
-    content:"";
-    position:absolute;
-    width:100%;
-    height:100%;
-    background:#74C7D5;
-    border-radius:50%;
-    border:2px solid #74C7D5;
-	-webkit-box-sizing: content-box; 
-	-moz-box-sizing: content-box; 
-	box-sizing: content-box;
-    top:-2px;
-    left:-2px;
-    z-index:-1;
-	-webkit-transform: scale(1.4);
-	-moz-transform: scale(1.4);
-	-ms-transform: scale(1.4);
-	transform: scale(1.4);
-	opacity: 0;
-	-webkit-transition: all 0.4s ease-out;
-	-moz-transition: all 0.4s ease-out;
-	transition: all 0.4s ease-out;
-}
-
-.skills .icon:hover {
-    color:#fff;
-}
-
-.skills .icon:hover:after {
-	-webkit-transform: scale(1);
-	-moz-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-	opacity: 1;
-	transition: all 0.4s ease-out;
-}
-
-.skills .item {
-    margin-bottom:80px;
-} */
-
 /*---------------------------Portfolio Styles---------------------------*/
 #portfolio {
     background:#f5f5f5;
@@ -586,7 +518,7 @@ header.jumbotron {
     font-size:24px;
     line-height:24px;
     font-weight:300;
-    color:#6a6a6a;
+    color:#a3a3a3;
 }
 
 #filter-works ul li:last-child:after {
@@ -599,13 +531,14 @@ header.jumbotron {
     line-height:24px;
     font-weight:300;
     background:transparent;
-    color:#6a6a6a;
+    color:#a3a3a3;
     text-transform:uppercase;
     text-decoration:none;
 }
 
 #filter-works ul li:hover a, #filter-works ul li.active a {
-    color:#74C7D5;
+    color:black;
+    text-decoration: underline;
 }
 
 .masonry-wrapper {
@@ -770,12 +703,12 @@ header.jumbotron {
     padding-bottom: 1%; 
 }
 
-#contact .contact-info li:first-child > i {
-    font-size: 50px;
+#contact .contact-info li > i {
+    font-size: 35px;
 }
 
-#contact .contact-info li:nth-child(2) > i {
-    font-size: 35px;
+#contact .contact-info li:nth-child(3) > i {
+    font-size: 30px;
 }
 
 #contact .contact-info i {
@@ -787,6 +720,17 @@ header.jumbotron {
     font-size:18px;
     line-height:30px;
     font-weight:400;
+    color: #fff;
+}
+
+.phone, .email {
+    color: #fff;
+    text-decoration: underline;
+}
+
+.phone:hover, .email:hover {
+    color: #a3a3a3;
+    text-decoration: underline;
 }
 
 #contact-form .form-group label {
@@ -795,10 +739,6 @@ header.jumbotron {
     line-height:24px;
     font-weight:400;
     text-transform:uppercase;
-}
-
-#contact-form.no-placeholder .form-group label {
-    display:block;
 }
 
 #contact-form .form-control {
@@ -813,7 +753,7 @@ header.jumbotron {
     font-size:30px;
     line-height:48px;
     font-weight:300;
-    color:#74c7d5;
+    color:black;
     padding-left:64px;
 }
 
@@ -827,16 +767,13 @@ header.jumbotron {
     position:absolute;
     top:0;
     left:5px;
-    color:#74c7d5;
+    color:#a3a3a3;
     font-size:32px;
     line-height:68px;
     text-align:center;
     font-weight:300;
 }
 
-#contact-form.no-placeholder .form-group [class*="fa"] {
-    top:30px;
-}
 
 #contact-form textarea.form-control {
     height:auto;
@@ -853,26 +790,51 @@ header.jumbotron {
     box-shadow:none;
 }
 
+#contact-form .controls:hover i {
+    color: black;
+}
+
+.btn-theme {
+	color:#a3a3a3;
+	padding:15px 90px;
+	font-size:24px;
+	font-weight:300;
+	text-transform:uppercase;
+	border:none;
+	border-radius:0;
+	-webkit-transition:color 0.2s ease-in-out;
+	transition:color 0.2s ease-in-out;
+}
+
+.btn-theme:hover, .btn-theme:active, .btn-theme:focus {
+	cursor:pointer;
+	color:black;
+}
+
+.btn-theme [class*=fa] {
+    margin-right:10px;
+}
+
 #contact-form .form-control::-webkit-input-placeholder { /* WebKit browsers */
-    color:    #74c7d5;
+    color:    #a3a3a3;
 }
 
 #contact-form .form-control:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    color:    #74c7d5;
+    color:    #a3a3a3;
     opacity:1;
 }
 
 #contact-form .form-control::-moz-placeholder { /* Mozilla Firefox 19+ */
-    color:    #74c7d5;
+    color:    #a3a3a3;
     opacity:1;
 }
 
 #contact-form .form-control:-ms-input-placeholder { /* Internet Explorer 10+ */
-    color:    #74c7d5;
+    color:    #a3a3a3;
 }
 
 #contact-form .error-message {
-    background:#74c7d5;
+    background:black;
     padding:10px 20px;
     position:absolute;
     top:-10px;
@@ -884,7 +846,7 @@ header.jumbotron {
 /*---------------------------Footer Styles-----------------------------*/
 #main-footer {
     background:#fff;
-    color:#74c7d5;
+    color:#a3a3a3;
     padding:30px 0;
 }
 
@@ -894,13 +856,25 @@ header.jumbotron {
 }
 
 #main-footer .small-logo {
-    padding:0;
+    padding:10px 0 0 0;
     margin:0;
     margin-bottom:24px;
     font-size:24px;
     line-height:24px;
     font-weight:normal;
-    color:#74c7d5;
+    text-align: center;
+}
+
+#main-footer .small-logo a {
+    color:#a3a3a3;
+}
+
+#main-footer .small-logo a:hover {
+    color:black;
+}
+
+#main-footer h5 {
+    text-align: center;
 }
 
 #main-footer .small-logo span {
@@ -923,19 +897,20 @@ header.jumbotron {
     display:inline-block;
     padding:0 15px;
     line-height:24px;
-    border-right:1px solid #74c7d5;
 }
 
 #main-footer ul.footer-nav li:first-child {
     padding-left:0;
+    border-right:1px solid #a3a3a3;
 }
 
 #main-footer ul.footer-nav li:last-child {
-    border-right:none;
+    border-left:1px solid #a3a3a3;
+    padding-right: 0;
 }
 
 #main-footer ul.footer-nav li a {
-    color:#74c7d5;
+    color:#a3a3a3;
     text-decoration:none;
     font-size:14px;
     line-height:24px;
@@ -948,62 +923,37 @@ header.jumbotron {
 }
 
 #main-footer ul.footer-nav li a:hover, #main-footer ul.footer-nav li a:active {
-    color:#229Cc8;
+    color:black;
     text-decoration:none;
 }
 
-#main-footer p {
-    color:#74c7d5;
-    font-size:14px;
-    line-height:24px;
-    font-weight:400;
-}
-
-#main-footer .right-col {
-    text-align:right;
-}
-
-#main-footer .right-col h2 {
-    text-transform:none;
-    font-size:18px;
-    line-height:24px;
-    font-weight:700;
-    margin:0 0 24px;
-}
-
-#main-footer .right-col p {
-    font-size:15px;
-    line-height:24px;
-    font-weight:300;
-}
-
-#social {
-    width: 50%;
+.scroll-up {
     position: absolute;
-    bottom: 37%;
-    left: 75%;
+    left: 50%;
 }
 
-#social ul {
-    padding: 0;
-    margin: 0;
+.scroll-up-icon {
+    position: absolute;
+    left: 50%;
+    -webkit-animation: scroll-up-anim 1s infinite;
+    -moz-animation: scroll-up-anim 1s infinite;
+    -o-animation: scroll-up-anim 1s infinite;
+    animation: scroll-up-anim 1s infinite;
+    z-index: 2;
 }
 
-#social li > i {
-    position: relative;
-    height: 15%;
-    width: 15%;
+@keyframes scroll-up-anim {
+    0% {
+        bottom: 7px;
+    }
+    50% {
+        bottom: 2px;
+    }
+    100% {
+        bottom: 7px;
+    }
 }
 
-#social li {
-    font-size: 115%;
-    text-align: center;
-    height: 50%;
-    width: 25%;
-    list-style-type: none;
-    display: inline-block;
-    padding: 5% 0;
-}
 /*---------------------------Scrolling animations----------------------------*/
 .scrollimation.fade-in {
 	opacity:0;
