--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -462,6 +462,18 @@ header.jumbotron {
     height: 10%;
 }
 
+.devicon svg {
+    opacity: 0.7;
+}
+
+.devicon > div:hover p, .devicon > div:focus p, .devicon > div:active p {
+    color: black;
+}
+
+.devicon > div:hover svg, .devicon > div:active svg, .devicon > div:focus svg {
+    opacity: 1;
+}
+
 .devicon div svg {
     display: inline-block;
     height: 25%;
@@ -473,19 +485,6 @@ header.jumbotron {
     background:#fff;
     color:#999;
     padding:80px 0;
-}
-
-.skills h2 {
-    margin:0;
-    margin-bottom:24px;
-    font-size:24px;
-    font-weight:400;
-    color: #545454
-}
-
-.skills p {
-    margin:0;
-    margin-bottom:24px;
 }
 
 /*---------------------------Portfolio Styles---------------------------*/
@@ -598,29 +597,12 @@ header.jumbotron {
     opacity:0;
     -webkit-transition:all 0.3s ease-out;
     transition:all 0.3s ease-out;
+    background:rgba(60, 72, 72, 0.9);
 }
 
-.project-item .hover-mask:hover {
-    background:rgba(60, 72, 72, 0.9);
+.project-item .hover-mask:hover, .project-item .hover-mask:active, .project-item .hover-mask:focus {
     opacity: 1;
     padding:15px;
-}
-
-.project-item .hover-mask:after {
-    position:absolute;
-    content:"";
-    width:100%;
-    height:100%;
-    top:0;
-    left:0;
-    background:transparent;
-    border:0px solid rgba(255,255,255,0.2);
-    -webkit-transition:border 0.3s ease-out;
-    transition:border 0.3s ease-out;
-}
-
-.project-item .hover-mask:hover:after {
-    border-width:20px;
 }
 
 .project-item .hover-mask .project-title {
@@ -640,6 +622,16 @@ header.jumbotron {
     text-align:center;
     -webkit-transition:all 0.3s ease-out;
     transition:all 0.3s ease-out;
+    opacity: 1;
+}
+
+.project-item .hover-mask:hover span {
+    opacity: 2;
+}
+
+.project-item .hover-mask:hover span:hover {
+    cursor: pointer;
+    color: #a3a3a3;
 }
 
 .project-item .hover-mask .live {
@@ -648,12 +640,6 @@ header.jumbotron {
 
 .project-item .hover-mask .code {
     padding-left: 20%;
-}
-
-.live:hover, .code:hover {
-    cursor: pointer;
-    color: #74c7d5;
-    opacity: 1000;
 }
 
 .masonry, .masonry .masonry-brick {
