--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -227,6 +227,7 @@ a:focus, .btn:focus {
 /* Hover Effect */
 #main-nav .nav a {
     position:relative;
+    cursor: pointer;
 }
 
 #main-nav .nav a:before {
@@ -911,6 +912,7 @@ header.jumbotron {
 #main-footer ul.footer-nav li a:hover, #main-footer ul.footer-nav li a:active {
     color:black;
     text-decoration:none;
+    cursor: pointer;
 }
 
 .scroll-up {
