--- a/HTML/css/light.css
+++ b/HTML/css/light.css
@@ -1,338 +1,3 @@
-/*-------------------------Main Layout Styles---------------------------*/
-.mt-0 {
-    margin-top: 0!important;
-}
-
-.mb-0 {
-    margin-bottom: 0!important;
-}
-
-.img-center {
-    margin:20px auto;
-}
-
-#main-nav {
-    width: 100vw;
-}
-
-#main-nav a.ir-logo {
-    margin:0;
-    margin-top:5px;
-    padding:0;
-    width:151px;
-    height:57px;
-	text-indent: 200%;
-	white-space: nowrap;
-	overflow: hidden;
-    background: url("../assets/logo.png");
-}
-
-#main-nav a.ir-logo span {
-    color:transparent;
-    font:0/0 a;
-}
-
-.navbar {
-    margin:0;
-    border-radius:0;
-}
-
-/*--------------------------- Preloader Styles -----------------------------*/
-#page-loader {
-	position: fixed;
-	right:0;
-	bottom: 0;
-	top: 0;
-	width:100%;
-	background: #fff;
-	z-index: 99999;
-}
-
-#page-loader .page-loader-gif {
-	display: block;
-	width:64px;
-	height:64px;
-	position: absolute;
-	top:50%;
-	left:50%;
-	margin:-32px 0 0 -32px;
-	background: url('../assets/preloader.gif') no-repeat;
-}
-
-/*------------------------------Main Typography Styles---------------------------------*/
-body {
-    font-family: Lato, sans-serif;
-    color:#999;
-	overflow-x:hidden;
-}
-
-h1, h2, h3, h4, h5, h6 {
-	font-family: Lato, sans-serif;
-	color:#a3a3a3;
-}
-
-h1 {
-    font-size:30px;
-    line-height:30px;
-    font-weight:300;
-    text-transform:uppercase;
-    letter-spacing:0.02em;
-}
-
-h2.section-title {
-    position:relative;
-    margin:0 0 124px;
-    font-size:24px;
-    line-height:64px;
-    font-weight:300;
-    text-align:center;
-    color:#545454;
-    z-index:1;
-    letter-spacing: 20px;
-}
-
-h2.ribbon-title:before, 
-h2.ribbon-title:after {
-    top: 5px;
-    z-index: -100;
-    content: '';
-    height: 0;
-    width: 0;
-    border-style: solid;
-    border-width: 0;
-    position: relative;
-}
-
-h2.ribbon-title:before {
-    border-color: #545454 #545454 #545454 transparent;
-    left: -40px;
-    border-width: 20px;
-}
-
-h2.ribbon-title:after {
-    border-color: #545454 transparent #545454 #545454;
-    right: -40px;
-    border-width: 20px;
-}
-
-h2.ribbon-title.contact-title:before {
-    border-color: whitesmoke whitesmoke whitesmoke transparent;
-}
-
-h2.ribbon-title.contact-title:after {
-    border-color: whitesmoke transparent whitesmoke whitesmoke;
-}
-
-h2 {
-    font-size:21px;
-    line-height:24px;
-    font-weight:bold;
-    text-transform:uppercase;
-}
-
-p {
-    font-size:18px;
-    line-height:24px;
-    font-weight:300;
-    letter-spacing:0.01em;
-    margin-bottom:20px;
-}
-
-a, a:hover, a:focus {
-    outline:none !important;
-    text-decoration:none;
-}
-
-a {
-  color: #228Ca8;
-  text-decoration: none;
-}
-
-a:hover, a:focus {
-  color: #229Cc8;
-  text-decoration: none;
-}
-
-a:focus, .btn:focus {
-  outline: none;
-}
-
-/*--------------------------Color Toggle---------------------------*/
-.toggleWrapper {
-    /* position: absolute;
-    top: 50%;
-    left: 50%; */
-    overflow: hidden;
-    padding: 0 50px;
-    /* transform: translate3d(-50%, -50%, 0); */
-}
-.toggleWrapper input {
-    position: absolute;
-    left: -99em;
-}
-.toggle {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    width: 90px;
-    height: 50px;
-    background-color: #83d8ff;
-    border-radius: 84px;
-    transition: background-color 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
-.toggle:before {
-    content: "Dark";
-    position: absolute;
-    left: -42px;
-    top: 15px;
-    font-size: 18px;
-}
-.toggle:after {
-    content: "Light";
-    position: absolute;
-    right: -42px;
-    top: 15px;
-    font-size: 18px;
-    color: #a3a3a3;
-}
-.toggle__handler {
-    display: inline-block;
-    position: relative;
-    z-index: 1;
-    top: 3px;
-    left: 3px;
-    width: 44px;
-    height: 44px;
-    background-color: #ffcf96;
-    border-radius: 50px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-    transition: all 400ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    transform: rotate(-45deg);
-}
-.toggle__handler .crater {
-    position: absolute;
-    background-color: #e8cda5;
-    opacity: 0;
-    transition: opacity 200ms ease-in-out;
-    border-radius: 100%;
-}
-.toggle__handler .crater--1 {
-    top: 18px;
-    left: 10px;
-    width: 4px;
-    height: 4px;
-}
-.toggle__handler .crater--2 {
-    top: 28px;
-    left: 22px;
-    width: 6px;
-    height: 6px;
-}
-.toggle__handler .crater--3 {
-    top: 10px;
-    left: 25px;
-    width: 8px;
-    height: 8px;
-}
-.star {
-    position: absolute;
-    background-color: #fff;
-    transition: all 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-    border-radius: 50%;
-}
-.star--1 {
-    top: 10px;
-    left: 35px;
-    z-index: 0;
-    width: 30px;
-    height: 3px;
-}
-.star--2 {
-    top: 18px;
-    left: 28px;
-    z-index: 1;
-    width: 30px;
-    height: 3px;
-}
-.star--3 {
-    top: 27px;
-    left: 40px;
-    z-index: 0;
-    width: 30px;
-    height: 3px;
-}
-.star--4, .star--5, .star--6 {
-    opacity: 0;
-    transition: all 300ms 0 cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
-.star--4 {
-    top: 16px;
-    left: 11px;
-    z-index: 0;
-    width: 2px;
-    height: 2px;
-    transform: translate3d(3px, 0, 0);
-}
-.star--5 {
-    top: 32px;
-    left: 17px;
-    z-index: 0;
-    width: 3px;
-    height: 3px;
-    transform: translate3d(3px, 0, 0);
-}
-.star--6 {
-    top: 36px;
-    left: 28px;
-    z-index: 0;
-    width: 2px;
-    height: 2px;
-    transform: translate3d(3px, 0, 0);
-}
-input:checked + .toggle {
-    background-color: #749dd6;
-}
-input:checked + .toggle:before {
-    color: #a3a3a3;
-}
-input:checked + .toggle:after {
-    color: #fff;
-}
-input:checked + .toggle .toggle__handler {
-    background-color: #ffe5b5;
-    transform: translate3d(40px, 0, 0) rotate(0);
-}
-input:checked + .toggle .toggle__handler .crater {
-    opacity: 1;
-}
-input:checked + .toggle .star--1 {
-    width: 2px;
-    height: 2px;
-}
-input:checked + .toggle .star--2 {
-    width: 4px;
-    height: 4px;
-    transform: translate3d(-5px, 0, 0);
-}
-input:checked + .toggle .star--3 {
-    width: 2px;
-    height: 2px;
-    transform: translate3d(-7px, 0, 0);
-}
-input:checked + .toggle .star--4, input:checked + .toggle .star--5, input:checked + .toggle .star--6 {
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-}
-input:checked + .toggle .star--4 {
-    transition: all 300ms 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
-input:checked + .toggle .star--5 {
-    transition: all 300ms 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
-input:checked + .toggle .star--6 {
-    transition: all 300ms 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
-
 /*--------------------------Navigation Styles---------------------------*/
 .navbar-brand {
     padding:0 10px;
@@ -340,7 +5,7 @@ input:checked + .toggle .star--6 {
     line-height:54px;
     font-weight:normal;
     height:auto;
-    color:#a3a3a3;
+    color: gold;
 }
 
 .navbar-brand:hover, .navbar-brand:active, .navbar-brand:focus {
