--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -181,14 +181,14 @@ a:focus, .btn:focus {
     transition: background-color 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 .toggle:before {
-    content: "Dark";
+    content: "Light";
     position: absolute;
     left: -42px;
     top: 15px;
     font-size: 18px;
 }
 .toggle:after {
-    content: "Light";
+    content: "Dark";
     position: absolute;
     right: -42px;
     top: 15px;
@@ -289,6 +289,8 @@ a:focus, .btn:focus {
     height: 2px;
     transform: translate3d(3px, 0, 0);
 }
+
+/* input chcecked styles */
 input:checked + .toggle {
     background-color: #749dd6;
 }
