--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -37,6 +37,58 @@
     border-radius:0;
 }
 
+[class^="hoverer-"] {
+    margin: .4em;
+    padding: 1em;
+    cursor: pointer;
+    text-decoration: none;
+    color: #666;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.hoverer-shadow {
+    display: inline-block;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+
+.hoverer-shadow:hover, .hoverer-shadow:focus, .hoverer-shadow:active {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+}
+
+.hoverr-shadow:before {
+    pointer-events: none;
+    position: absolute;
+    z-index: -1;
+    content: '';
+    top: 100%;
+    left: 5%;
+    height: 10px;
+    width: 90%;
+    opacity: 0;
+    background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
+    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform, opacity;
+    transition-property: transform, opacity;
+}
+
+.hoverer-shadow:hover:before, .hoverer-shadow:focus:before, .hoverer-shadow:active:before {
+    opacity: 1;
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+}
+
 /*--------------------------- Preloader Styles -----------------------------*/
 #page-loader {
 	position: fixed;
@@ -82,6 +134,7 @@ h1 {
 h2.section-title {
     position:relative;
     margin:0 0 124px;
+    margin-bottom: 95px;
     font-size:24px;
     line-height:64px;
     font-weight:300;
@@ -1178,7 +1231,7 @@ header.jumbotron {
     letter-spacing:0.02em;
     padding:0;
     -webkit-transition:color 0.2s ease-out;
-    transition:color 0.2s ease-out;
+    transition:all 0.2s ease-out;
 }
 
 #main-footer ul.footer-nav li a:hover, #main-footer ul.footer-nav li a:active {
